--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 <body>
 
 <iframe
-  src="https://www.youtube.com/embed/xvFZjo5PgG0?autoplay=1&controls=0&fs=1&rel=0&modestbranding=1"
+  src="https://www.youtube.com/embed/xvFZjo5PgG0?autoplay=1&mute=1&controls=0&fs=1"
   allow="autoplay; fullscreen"
   allowfullscreen>
 </iframe>
